kubernetes/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/part-of: arealis-zord
    app.kubernetes.io/component: gitops
